--- a/testplan/readme
+++ b/testplan/readme
@@ -1,4 +1,5 @@
 Run tests on stage
+Do not dial 911! Emergency service is connected on stage! Dial 933 for all dialtone 911 tests.
 Prioritize tests which haven't been run in a while or which are important
 Some tests are confusing or can't be run, don't stress, ask or leave notes
 For passed tests, mark date and name
