--- a/testplan/readme
+++ b/testplan/readme
@@ -1,6 +1,8 @@
-Run tests on stage
-Do not dial 911! Emergency service is connected on stage! Dial 933 for all dialtone 911 tests.
-Prioritize tests which haven't been run in a while or which are important
-Some tests are confusing or can't be run, don't stress, ask or leave notes
-For passed tests, mark date and name
-For failed tests, mark fail, name, comment, optionally open issue and add link
+- run tests listed in testplan
+- tests are found in tests
+- run tests on stage
+- do not dial 911! Emergency service is connected on stage! Dial 933 for all dialtone 911 tests.
+- prioritize tests which haven't been run in a while or which are important
+- some tests are confusing or can't be run, don't stress, ask or leave notes
+- for passed tests, mark date and name
+- for failed tests, mark fail, name, comment, optionally open issue and add link
